RbA Build/src/objects/Procedure_Code__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Additional Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Procedure_Code_Description__c</fullName>
        <inlineHelpText>Description for the procedure code (ex: Caulking, Silicone, VTV, Repair or Replace) limited to 77 characters</inlineHelpText>
        <label>Procedure Code Description</label>
        <length>77</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Minutes_Each__c</fullName>
        <label>Time (Minutes/Each)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Procedure Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Time_Minutes_Each__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Procedure Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Procedure Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Procedure_Code_3_Digits_Only</fullName>
        <active>true</active>
        <errorConditionFormula>LEN(Name)&gt;3</errorConditionFormula>
        <errorMessage>The procedure code should only be 3 digits (ex: 100)</errorMessage>
    </validationRules>
</CustomObject>